package meeting;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/4/6 20:25
 */
public interface MyObserver {

    void receive();
}
