package meeting;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/4/6 20:24
 */
public interface MySubject {

    void inform();
}
